lab2/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> WHILE ( condition ) instruction
Rule 7     instruction -> FOR var = expression : expression instruction
Rule 8     instruction -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> assignment_instruction ;
Rule 11    instruction -> reserved_instruction ;
Rule 12    instruction -> { instructions }
Rule 13    reserved_instruction -> PRINT expression_list
Rule 14    reserved_instruction -> RETURN expression_list
Rule 15    reserved_instruction -> CONTINUE
Rule 16    reserved_instruction -> BREAK
Rule 17    expression_list -> expression
Rule 18    expression_list -> expression_list , expression
Rule 19    assignment_instruction -> vector_idx assignment_operator expression
Rule 20    assignment_instruction -> matrix_idx assignment_operator expression
Rule 21    assignment_instruction -> var assignment_operator expression
Rule 22    assignment_operator -> DIVASSIGN  [precedence=right, level=9]
Rule 23    assignment_operator -> MULTASSIGN  [precedence=right, level=9]
Rule 24    assignment_operator -> SUBASSIGN  [precedence=right, level=9]
Rule 25    assignment_operator -> ADDASSIGN  [precedence=right, level=9]
Rule 26    assignment_operator -> =
Rule 27    expression -> STRING
Rule 28    expression -> variable
Rule 29    expression -> ONES ( expression )
Rule 30    expression -> ZEROS ( expression )
Rule 31    expression -> EYE ( expression )
Rule 32    expression -> vector
Rule 33    expression -> matrix
Rule 34    expression -> expression '  [precedence=left, level=8]
Rule 35    expression -> - expression  [precedence=left, level=4]
Rule 36    expression -> expression DOTDIV expression  [precedence=left, level=7]
Rule 37    expression -> expression DOTMULT expression  [precedence=left, level=7]
Rule 38    expression -> expression DOTSUB expression  [precedence=left, level=5]
Rule 39    expression -> expression DOTADD expression  [precedence=left, level=5]
Rule 40    expression -> expression / expression  [precedence=left, level=6]
Rule 41    expression -> expression * expression  [precedence=left, level=6]
Rule 42    expression -> expression - expression  [precedence=left, level=4]
Rule 43    expression -> expression + expression  [precedence=left, level=4]
Rule 44    var -> ID
Rule 45    condition -> expression GE expression  [precedence=nonassoc, level=3]
Rule 46    condition -> expression LE expression  [precedence=nonassoc, level=3]
Rule 47    condition -> expression GT expression  [precedence=nonassoc, level=3]
Rule 48    condition -> expression LT expression  [precedence=nonassoc, level=3]
Rule 49    condition -> expression NOTEQUAL expression  [precedence=nonassoc, level=3]
Rule 50    condition -> expression EQUAL expression  [precedence=nonassoc, level=3]
Rule 51    matrix -> [ vectors ]
Rule 52    vectors -> vector
Rule 53    vectors -> vectors , vector
Rule 54    vector -> [ variables ]
Rule 55    variables -> variable
Rule 56    variables -> variables , variable
Rule 57    variable -> matrix_idx
Rule 58    variable -> vector_idx
Rule 59    variable -> number
Rule 60    variable -> var
Rule 61    number -> FLOAT
Rule 62    number -> INT
Rule 63    matrix_idx -> var [ INT , INT ]
Rule 64    vector_idx -> var [ INT ]

Terminals, with rules where they appear:

'                    : 34
(                    : 6 8 9 29 30 31
)                    : 6 8 9 29 30 31
*                    : 41
+                    : 43
,                    : 18 53 56 63
-                    : 35 42
/                    : 40
:                    : 7
;                    : 10 11
=                    : 7 26
ADDASSIGN            : 25
BREAK                : 16
CONTINUE             : 15
DIVASSIGN            : 22
DOTADD               : 39
DOTDIV               : 36
DOTMULT              : 37
DOTSUB               : 38
ELSE                 : 8
EQUAL                : 50
EYE                  : 31
FLOAT                : 61
FOR                  : 7
GE                   : 45
GT                   : 47
ID                   : 44
IF                   : 8 9
INT                  : 62 63 63 64
LE                   : 46
LT                   : 48
MULTASSIGN           : 23
NOTEQUAL             : 49
ONES                 : 29
PRINT                : 13
RETURN               : 14
STRING               : 27
SUBASSIGN            : 24
WHILE                : 6
ZEROS                : 30
[                    : 51 54 63 64
]                    : 51 54 63 64
error                : 
{                    : 12
}                    : 12

Nonterminals, with rules where they appear:

assignment_instruction : 10
assignment_operator  : 19 20 21
condition            : 6 8 9
expression           : 7 7 17 18 19 20 21 29 30 31 34 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 45 45 46 46 47 47 48 48 49 49 50 50
expression_list      : 13 14 18
instruction          : 4 5 6 7 8 8 9
instructions         : 3 5 12
instructions_opt     : 1
matrix               : 33
matrix_idx           : 20 57
number               : 59
program              : 0
reserved_instruction : 11
var                  : 7 21 60 63 64
variable             : 28 55 56
variables            : 54 56
vector               : 32 52 53
vector_idx           : 19 58
vectors              : 51 53


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . vector_idx assignment_operator expression
    (20) assignment_instruction -> . matrix_idx assignment_operator expression
    (21) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (64) vector_idx -> . var [ INT ]
    (63) matrix_idx -> . var [ INT , INT ]
    (44) var -> . ID
    $end            reduce using rule 2 (instructions_opt -> .)
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 14
    RETURN          shift and go to state 15
    CONTINUE        shift and go to state 16
    BREAK           shift and go to state 17
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    vector_idx                     shift and go to state 12
    matrix_idx                     shift and go to state 13

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . vector_idx assignment_operator expression
    (20) assignment_instruction -> . matrix_idx assignment_operator expression
    (21) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (64) vector_idx -> . var [ INT ]
    (63) matrix_idx -> . var [ INT , INT ]
    (44) var -> . ID
    $end            reduce using rule 3 (instructions_opt -> instructions .)
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 14
    RETURN          shift and go to state 15
    CONTINUE        shift and go to state 16
    BREAK           shift and go to state 17
    ID              shift and go to state 18

    instruction                    shift and go to state 19
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    vector_idx                     shift and go to state 12
    matrix_idx                     shift and go to state 13

state 4

    (4) instructions -> instruction .
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    {               reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> WHILE . ( condition ) instruction
    (               shift and go to state 20


state 6

    (7) instruction -> FOR . var = expression : expression instruction
    (44) var -> . ID
    ID              shift and go to state 18

    var                            shift and go to state 21

state 7

    (21) assignment_instruction -> var . assignment_operator expression
    (64) vector_idx -> var . [ INT ]
    (63) matrix_idx -> var . [ INT , INT ]
    (22) assignment_operator -> . DIVASSIGN
    (23) assignment_operator -> . MULTASSIGN
    (24) assignment_operator -> . SUBASSIGN
    (25) assignment_operator -> . ADDASSIGN
    (26) assignment_operator -> . =
    [               shift and go to state 23
    DIVASSIGN       shift and go to state 24
    MULTASSIGN      shift and go to state 25
    SUBASSIGN       shift and go to state 26
    ADDASSIGN       shift and go to state 27
    =               shift and go to state 28

    assignment_operator            shift and go to state 22

state 8

    (8) instruction -> IF . ( condition ) instruction ELSE instruction
    (9) instruction -> IF . ( condition ) instruction
    (               shift and go to state 29


state 9

    (10) instruction -> assignment_instruction . ;
    ;               shift and go to state 30


state 10

    (11) instruction -> reserved_instruction . ;
    ;               shift and go to state 31


state 11

    (12) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . vector_idx assignment_operator expression
    (20) assignment_instruction -> . matrix_idx assignment_operator expression
    (21) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (64) vector_idx -> . var [ INT ]
    (63) matrix_idx -> . var [ INT , INT ]
    (44) var -> . ID
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 14
    RETURN          shift and go to state 15
    CONTINUE        shift and go to state 16
    BREAK           shift and go to state 17
    ID              shift and go to state 18

    instructions                   shift and go to state 32
    instruction                    shift and go to state 4
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    vector_idx                     shift and go to state 12
    matrix_idx                     shift and go to state 13

state 12

    (19) assignment_instruction -> vector_idx . assignment_operator expression
    (22) assignment_operator -> . DIVASSIGN
    (23) assignment_operator -> . MULTASSIGN
    (24) assignment_operator -> . SUBASSIGN
    (25) assignment_operator -> . ADDASSIGN
    (26) assignment_operator -> . =
    DIVASSIGN       shift and go to state 24
    MULTASSIGN      shift and go to state 25
    SUBASSIGN       shift and go to state 26
    ADDASSIGN       shift and go to state 27
    =               shift and go to state 28

    assignment_operator            shift and go to state 33

state 13

    (20) assignment_instruction -> matrix_idx . assignment_operator expression
    (22) assignment_operator -> . DIVASSIGN
    (23) assignment_operator -> . MULTASSIGN
    (24) assignment_operator -> . SUBASSIGN
    (25) assignment_operator -> . ADDASSIGN
    (26) assignment_operator -> . =
    DIVASSIGN       shift and go to state 24
    MULTASSIGN      shift and go to state 25
    SUBASSIGN       shift and go to state 26
    ADDASSIGN       shift and go to state 27
    =               shift and go to state 28

    assignment_operator            shift and go to state 34

state 14

    (13) reserved_instruction -> PRINT . expression_list
    (17) expression_list -> . expression
    (18) expression_list -> . expression_list , expression
    (27) expression -> . STRING
    (28) expression -> . variable
    (29) expression -> . ONES ( expression )
    (30) expression -> . ZEROS ( expression )
    (31) expression -> . EYE ( expression )
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . expression '
    (35) expression -> . - expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMULT expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . expression DOTADD expression
    (40) expression -> . expression / expression
    (41) expression -> . expression * expression
    (42) expression -> . expression - expression
    (43) expression -> . expression + expression
    (57) variable -> . matrix_idx
    (58) variable -> . vector_idx
    (59) variable -> . number
    (60) variable -> . var
    (54) vector -> . [ variables ]
    (51) matrix -> . [ vectors ]
    (63) matrix_idx -> . var [ INT , INT ]
    (64) vector_idx -> . var [ INT ]
    (61) number -> . FLOAT
    (62) number -> . INT
    (44) var -> . ID
    STRING          shift and go to state 37
    ONES            shift and go to state 39
    ZEROS           shift and go to state 40
    EYE             shift and go to state 41
    -               shift and go to state 44
    [               shift and go to state 49
    FLOAT           shift and go to state 51
    INT             shift and go to state 50
    ID              shift and go to state 18

    expression_list                shift and go to state 35
    expression                     shift and go to state 36
    variable                       shift and go to state 38
    vector                         shift and go to state 42
    matrix                         shift and go to state 43
    matrix_idx                     shift and go to state 45
    vector_idx                     shift and go to state 46
    number                         shift and go to state 47
    var                            shift and go to state 48

state 15

    (14) reserved_instruction -> RETURN . expression_list
    (17) expression_list -> . expression
    (18) expression_list -> . expression_list , expression
    (27) expression -> . STRING
    (28) expression -> . variable
    (29) expression -> . ONES ( expression )
    (30) expression -> . ZEROS ( expression )
    (31) expression -> . EYE ( expression )
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . expression '
    (35) expression -> . - expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMULT expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . expression DOTADD expression
    (40) expression -> . expression / expression
    (41) expression -> . expression * expression
    (42) expression -> . expression - expression
    (43) expression -> . expression + expression
    (57) variable -> . matrix_idx
    (58) variable -> . vector_idx
    (59) variable -> . number
    (60) variable -> . var
    (54) vector -> . [ variables ]
    (51) matrix -> . [ vectors ]
    (63) matrix_idx -> . var [ INT , INT ]
    (64) vector_idx -> . var [ INT ]
    (61) number -> . FLOAT
    (62) number -> . INT
    (44) var -> . ID
    STRING          shift and go to state 37
    ONES            shift and go to state 39
    ZEROS           shift and go to state 40
    EYE             shift and go to state 41
    -               shift and go to state 44
    [               shift and go to state 49
    FLOAT           shift and go to state 51
    INT             shift and go to state 50
    ID              shift and go to state 18

    expression_list                shift and go to state 52
    expression                     shift and go to state 36
    variable                       shift and go to state 38
    vector                         shift and go to state 42
    matrix                         shift and go to state 43
    matrix_idx                     shift and go to state 45
    vector_idx                     shift and go to state 46
    number                         shift and go to state 47
    var                            shift and go to state 48

state 16

    (15) reserved_instruction -> CONTINUE .
    ;               reduce using rule 15 (reserved_instruction -> CONTINUE .)


state 17

    (16) reserved_instruction -> BREAK .
    ;               reduce using rule 16 (reserved_instruction -> BREAK .)


state 18

    (44) var -> ID .
    [               reduce using rule 44 (var -> ID .)
    DIVASSIGN       reduce using rule 44 (var -> ID .)
    MULTASSIGN      reduce using rule 44 (var -> ID .)
    SUBASSIGN       reduce using rule 44 (var -> ID .)
    ADDASSIGN       reduce using rule 44 (var -> ID .)
    =               reduce using rule 44 (var -> ID .)
    '               reduce using rule 44 (var -> ID .)
    DOTDIV          reduce using rule 44 (var -> ID .)
    DOTMULT         reduce using rule 44 (var -> ID .)
    DOTSUB          reduce using rule 44 (var -> ID .)
    DOTADD          reduce using rule 44 (var -> ID .)
    /               reduce using rule 44 (var -> ID .)
    *               reduce using rule 44 (var -> ID .)
    -               reduce using rule 44 (var -> ID .)
    +               reduce using rule 44 (var -> ID .)
    ,               reduce using rule 44 (var -> ID .)
    ;               reduce using rule 44 (var -> ID .)
    GE              reduce using rule 44 (var -> ID .)
    LE              reduce using rule 44 (var -> ID .)
    GT              reduce using rule 44 (var -> ID .)
    LT              reduce using rule 44 (var -> ID .)
    NOTEQUAL        reduce using rule 44 (var -> ID .)
    EQUAL           reduce using rule 44 (var -> ID .)
    :               reduce using rule 44 (var -> ID .)
    )               reduce using rule 44 (var -> ID .)
    WHILE           reduce using rule 44 (var -> ID .)
    FOR             reduce using rule 44 (var -> ID .)
    IF              reduce using rule 44 (var -> ID .)
    {               reduce using rule 44 (var -> ID .)
    PRINT           reduce using rule 44 (var -> ID .)
    RETURN          reduce using rule 44 (var -> ID .)
    CONTINUE        reduce using rule 44 (var -> ID .)
    BREAK           reduce using rule 44 (var -> ID .)
    ID              reduce using rule 44 (var -> ID .)
    ]               reduce using rule 44 (var -> ID .)


state 19

    (5) instructions -> instructions instruction .
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 20

    (6) instruction -> WHILE ( . condition ) instruction
    (45) condition -> . expression GE expression
    (46) condition -> . expression LE expression
    (47) condition -> . expression GT expression
    (48) condition -> . expression LT expression
    (49) condition -> . expression NOTEQUAL expression
    (50) condition -> . expression EQUAL expression
    (27) expression -> . STRING
    (28) expression -> . variable
    (29) expression -> . ONES ( expression )
    (30) expression -> . ZEROS ( expression )
    (31) expression -> . EYE ( expression )
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . expression '
    (35) expression -> . - expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMULT expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . expression DOTADD expression
    (40) expression -> . expression / expression
    (41) expression -> . expression * expression
    (42) expression -> . expression - expression
    (43) expression -> . expression + expression
    (57) variable -> . matrix_idx
    (58) variable -> . vector_idx
    (59) variable -> . number
    (60) variable -> . var
    (54) vector -> . [ variables ]
    (51) matrix -> . [ vectors ]
    (63) matrix_idx -> . var [ INT , INT ]
    (64) vector_idx -> . var [ INT ]
    (61) number -> . FLOAT
    (62) number -> . INT
    (44) var -> . ID
    STRING          shift and go to state 37
    ONES            shift and go to state 39
    ZEROS           shift and go to state 40
    EYE             shift and go to state 41
    -               shift and go to state 44
    [               shift and go to state 49
    FLOAT           shift and go to state 51
    INT             shift and go to state 50
    ID              shift and go to state 18

    condition                      shift and go to state 53
    expression                     shift and go to state 54
    variable                       shift and go to state 38
    vector                         shift and go to state 42
    matrix                         shift and go to state 43
    matrix_idx                     shift and go to state 45
    vector_idx                     shift and go to state 46
    number                         shift and go to state 47
    var                            shift and go to state 48

state 21

    (7) instruction -> FOR var . = expression : expression instruction
    =               shift and go to state 55


state 22

    (21) assignment_instruction -> var assignment_operator . expression
    (27) expression -> . STRING
    (28) expression -> . variable
    (29) expression -> . ONES ( expression )
    (30) expression -> . ZEROS ( expression )
    (31) expression -> . EYE ( expression )
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . expression '
    (35) expression -> . - expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMULT expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . expression DOTADD expression
    (40) expression -> . expression / expression
    (41) expression -> . expression * expression
    (42) expression -> . expression - expression
    (43) expression -> . expression + expression
    (57) variable -> . matrix_idx
    (58) variable -> . vector_idx
    (59) variable -> . number
    (60) variable -> . var
    (54) vector -> . [ variables ]
    (51) matrix -> . [ vectors ]
    (63) matrix_idx -> . var [ INT , INT ]
    (64) vector_idx -> . var [ INT ]
    (61) number -> . FLOAT
    (62) number -> . INT
    (44) var -> . ID
    STRING          shift and go to state 37
    ONES            shift and go to state 39
    ZEROS           shift and go to state 40
    EYE             shift and go to state 41
    -               shift and go to state 44
    [               shift and go to state 49
    FLOAT           shift and go to state 51
    INT             shift and go to state 50
    ID              shift and go to state 18

    var                            shift and go to state 48
    expression                     shift and go to state 56
    variable                       shift and go to state 38
    vector                         shift and go to state 42
    matrix                         shift and go to state 43
    matrix_idx                     shift and go to state 45
    vector_idx                     shift and go to state 46
    number                         shift and go to state 47

state 23

    (64) vector_idx -> var [ . INT ]
    (63) matrix_idx -> var [ . INT , INT ]
    INT             shift and go to state 57


state 24

    (22) assignment_operator -> DIVASSIGN .
    STRING          reduce using rule 22 (assignment_operator -> DIVASSIGN .)
    ONES            reduce using rule 22 (assignment_operator -> DIVASSIGN .)
    ZEROS           reduce using rule 22 (assignment_operator -> DIVASSIGN .)
    EYE             reduce using rule 22 (assignment_operator -> DIVASSIGN .)
    -               reduce using rule 22 (assignment_operator -> DIVASSIGN .)
    [               reduce using rule 22 (assignment_operator -> DIVASSIGN .)
    FLOAT           reduce using rule 22 (assignment_operator -> DIVASSIGN .)
    INT             reduce using rule 22 (assignment_operator -> DIVASSIGN .)
    ID              reduce using rule 22 (assignment_operator -> DIVASSIGN .)


state 25

    (23) assignment_operator -> MULTASSIGN .
    STRING          reduce using rule 23 (assignment_operator -> MULTASSIGN .)
    ONES            reduce using rule 23 (assignment_operator -> MULTASSIGN .)
    ZEROS           reduce using rule 23 (assignment_operator -> MULTASSIGN .)
    EYE             reduce using rule 23 (assignment_operator -> MULTASSIGN .)
    -               reduce using rule 23 (assignment_operator -> MULTASSIGN .)
    [               reduce using rule 23 (assignment_operator -> MULTASSIGN .)
    FLOAT           reduce using rule 23 (assignment_operator -> MULTASSIGN .)
    INT             reduce using rule 23 (assignment_operator -> MULTASSIGN .)
    ID              reduce using rule 23 (assignment_operator -> MULTASSIGN .)


state 26

    (24) assignment_operator -> SUBASSIGN .
    STRING          reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    ONES            reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    ZEROS           reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    EYE             reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    -               reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    [               reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    FLOAT           reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    INT             reduce using rule 24 (assignment_operator -> SUBASSIGN .)
    ID              reduce using rule 24 (assignment_operator -> SUBASSIGN .)


state 27

    (25) assignment_operator -> ADDASSIGN .
    STRING          reduce using rule 25 (assignment_operator -> ADDASSIGN .)
    ONES            reduce using rule 25 (assignment_operator -> ADDASSIGN .)
    ZEROS           reduce using rule 25 (assignment_operator -> ADDASSIGN .)
    EYE             reduce using rule 25 (assignment_operator -> ADDASSIGN .)
    -               reduce using rule 25 (assignment_operator -> ADDASSIGN .)
    [               reduce using rule 25 (assignment_operator -> ADDASSIGN .)
    FLOAT           reduce using rule 25 (assignment_operator -> ADDASSIGN .)
    INT             reduce using rule 25 (assignment_operator -> ADDASSIGN .)
    ID              reduce using rule 25 (assignment_operator -> ADDASSIGN .)


state 28

    (26) assignment_operator -> = .
    STRING          reduce using rule 26 (assignment_operator -> = .)
    ONES            reduce using rule 26 (assignment_operator -> = .)
    ZEROS           reduce using rule 26 (assignment_operator -> = .)
    EYE             reduce using rule 26 (assignment_operator -> = .)
    -               reduce using rule 26 (assignment_operator -> = .)
    [               reduce using rule 26 (assignment_operator -> = .)
    FLOAT           reduce using rule 26 (assignment_operator -> = .)
    INT             reduce using rule 26 (assignment_operator -> = .)
    ID              reduce using rule 26 (assignment_operator -> = .)


state 29

    (8) instruction -> IF ( . condition ) instruction ELSE instruction
    (9) instruction -> IF ( . condition ) instruction
    (45) condition -> . expression GE expression
    (46) condition -> . expression LE expression
    (47) condition -> . expression GT expression
    (48) condition -> . expression LT expression
    (49) condition -> . expression NOTEQUAL expression
    (50) condition -> . expression EQUAL expression
    (27) expression -> . STRING
    (28) expression -> . variable
    (29) expression -> . ONES ( expression )
    (30) expression -> . ZEROS ( expression )
    (31) expression -> . EYE ( expression )
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . expression '
    (35) expression -> . - expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMULT expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . expression DOTADD expression
    (40) expression -> . expression / expression
    (41) expression -> . expression * expression
    (42) expression -> . expression - expression
    (43) expression -> . expression + expression
    (57) variable -> . matrix_idx
    (58) variable -> . vector_idx
    (59) variable -> . number
    (60) variable -> . var
    (54) vector -> . [ variables ]
    (51) matrix -> . [ vectors ]
    (63) matrix_idx -> . var [ INT , INT ]
    (64) vector_idx -> . var [ INT ]
    (61) number -> . FLOAT
    (62) number -> . INT
    (44) var -> . ID
    STRING          shift and go to state 37
    ONES            shift and go to state 39
    ZEROS           shift and go to state 40
    EYE             shift and go to state 41
    -               shift and go to state 44
    [               shift and go to state 49
    FLOAT           shift and go to state 51
    INT             shift and go to state 50
    ID              shift and go to state 18

    condition                      shift and go to state 58
    expression                     shift and go to state 54
    variable                       shift and go to state 38
    vector                         shift and go to state 42
    matrix                         shift and go to state 43
    matrix_idx                     shift and go to state 45
    vector_idx                     shift and go to state 46
    number                         shift and go to state 47
    var                            shift and go to state 48

state 30

    (10) instruction -> assignment_instruction ; .
    WHILE           reduce using rule 10 (instruction -> assignment_instruction ; .)
    FOR             reduce using rule 10 (instruction -> assignment_instruction ; .)
    IF              reduce using rule 10 (instruction -> assignment_instruction ; .)
    {               reduce using rule 10 (instruction -> assignment_instruction ; .)
    PRINT           reduce using rule 10 (instruction -> assignment_instruction ; .)
    RETURN          reduce using rule 10 (instruction -> assignment_instruction ; .)
    CONTINUE        reduce using rule 10 (instruction -> assignment_instruction ; .)
    BREAK           reduce using rule 10 (instruction -> assignment_instruction ; .)
    ID              reduce using rule 10 (instruction -> assignment_instruction ; .)
    $end            reduce using rule 10 (instruction -> assignment_instruction ; .)
    }               reduce using rule 10 (instruction -> assignment_instruction ; .)
    ELSE            reduce using rule 10 (instruction -> assignment_instruction ; .)


state 31

    (11) instruction -> reserved_instruction ; .
    WHILE           reduce using rule 11 (instruction -> reserved_instruction ; .)
    FOR             reduce using rule 11 (instruction -> reserved_instruction ; .)
    IF              reduce using rule 11 (instruction -> reserved_instruction ; .)
    {               reduce using rule 11 (instruction -> reserved_instruction ; .)
    PRINT           reduce using rule 11 (instruction -> reserved_instruction ; .)
    RETURN          reduce using rule 11 (instruction -> reserved_instruction ; .)
    CONTINUE        reduce using rule 11 (instruction -> reserved_instruction ; .)
    BREAK           reduce using rule 11 (instruction -> reserved_instruction ; .)
    ID              reduce using rule 11 (instruction -> reserved_instruction ; .)
    $end            reduce using rule 11 (instruction -> reserved_instruction ; .)
    }               reduce using rule 11 (instruction -> reserved_instruction ; .)
    ELSE            reduce using rule 11 (instruction -> reserved_instruction ; .)


state 32

    (12) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . vector_idx assignment_operator expression
    (20) assignment_instruction -> . matrix_idx assignment_operator expression
    (21) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (64) vector_idx -> . var [ INT ]
    (63) matrix_idx -> . var [ INT , INT ]
    (44) var -> . ID
    }               shift and go to state 59
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 14
    RETURN          shift and go to state 15
    CONTINUE        shift and go to state 16
    BREAK           shift and go to state 17
    ID              shift and go to state 18

    instruction                    shift and go to state 19
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    vector_idx                     shift and go to state 12
    matrix_idx                     shift and go to state 13

state 33

    (19) assignment_instruction -> vector_idx assignment_operator . expression
    (27) expression -> . STRING
    (28) expression -> . variable
    (29) expression -> . ONES ( expression )
    (30) expression -> . ZEROS ( expression )
    (31) expression -> . EYE ( expression )
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . expression '
    (35) expression -> . - expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMULT expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . expression DOTADD expression
    (40) expression -> . expression / expression
    (41) expression -> . expression * expression
    (42) expression -> . expression - expression
    (43) expression -> . expression + expression
    (57) variable -> . matrix_idx
    (58) variable -> . vector_idx
    (59) variable -> . number
    (60) variable -> . var
    (54) vector -> . [ variables ]
    (51) matrix -> . [ vectors ]
    (63) matrix_idx -> . var [ INT , INT ]
    (64) vector_idx -> . var [ INT ]
    (61) number -> . FLOAT
    (62) number -> . INT
    (44) var -> . ID
    STRING          shift and go to state 37
    ONES            shift and go to state 39
    ZEROS           shift and go to state 40
    EYE             shift and go to state 41
    -               shift and go to state 44
    [               shift and go to state 49
    FLOAT           shift and go to state 51
    INT             shift and go to state 50
    ID              shift and go to state 18
